# kent_hologram

./: .claudeproject  .dockerignore  .env.example  .gitignore  ANALOGICAL_REASONING_IMPLEMENTATION.md  ANALYSIS_INDEX.md  ANALYSIS_README.md  ANALYSIS_SUMMARY.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_SUMMARY.md  ARCHITECTURE_VALIDATION_REPORT.md  ARC_INTEGRATION_BLUEPRINT.md  ARC_SELF_REFERENTIAL_ANALYSIS.md  BUG_ANALYSIS_DETAILED.md  CADENCE_CODE_REVIEW.md  CADENCE_DELIVERABLES_INDEX.md  CADENCE_EXECUTIVE_BRIEF.md  CADENCE_QUICK_START.md  CADENCE_TECHNICAL_APPENDIX.md  CHANGES_SUMMARY.txt  CLAUDE.md  CODE_REVIEW_HDC_ANALOGY.md  CONTEXT_FLOW_DIAGRAMS.md  CRAG_FIXES_SUMMARY.md  DEEPCODE_ANALYSIS.md  DEEPCODE_EXEC_SUMMARY.md  DEEPCODE_INDEX.txt  DEEPCODE_README.md  DEEPCODE_TECHNICAL_APPENDIX.md  DEEPCODE_VISUAL_SUMMARY.txt  DEPLOYMENT_AND_EXAMPLES.md  DESIGN_ANALYSIS.md  DEVELOPER_GUIDE.md  DUAL_STREAM_ARCHITECTURE.md  Dockerfile  EMERGENT_LAYERS_README.md  FIXES_COMPLETE.md  FRONTEND_GETTING_STARTED.md  GENERATOR_FIX_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  (+39 more)
.claude/: settings.json
docs/: CODE_ENHANCEMENT_GUIDE.md  CONSCIOUS_HOLOGRAM_ARCH.md  CONVERSATIONAL_LEARNING.md  EXTEND_KENT_SWE_BENCHMARK.md  HDC_INTUITIVE_GUIDE.md  HDC_LEARNING_PHILOSOPHY.md  README.md  VENTRILOQUIST_ARCHITECTURE.md
examples/: analogical_reasoning_demo.py  basic_usage.py  code_enhancement_demo.py  complete_demo.py  conscious_demo.py  emergent_layers_demo.py  persistence_demo.py
scripts/: __init__.py  analyze_noise_levels.py  arc_benchmark.py  arc_benchmark_honest.py  arc_demo.py  arc_trainer.py  benchmark_capacity.py  benchmark_faiss_vs_hdc.py  benchmark_metacognition.py  benchmark_tasks.py  clear_memory.py  code_indexer.py  code_trainer.py  crew_trainer.py  debug_algebra.py  deduplicate_facts.py  diagnose_vector_layers.py  import_facts.py  ingest_concepts.py  ingest_gutenberg.py  mcp_client.py  migrate_vectors.py  recover_chromadb.py  run_all_trainers.sh  run_arc_benchmark.sh  (+7 more)
(+154 files in other folders)
