[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hologram"
version = "0.1.0"
description = "Bentov-Style Holographic Memory using Hyperdimensional Computing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kenneth Chambers"}
]
keywords = ["hyperdimensional-computing", "holographic-memory", "vector-symbolic-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "torch-hd>=0.5.0",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.24",
    "python-dotenv>=1.0.0",
    "langchain-google-genai>=1.0.0",
    "langchain-anthropic>=0.1.0",
    "sentence-transformers>=2.2.0",
    "openai>=2.9.0",
    "arckit>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
hologram = "hologram.chat.interface:main"

# Hatchling auto-detects packages in src/ layout
# No explicit configuration needed

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
